testNonExistingLatestTokenVersion